tests/type-errors/07-branch-mismatch.flt
// If branch type mismatch
// --- Command: dotnet run --project FunLang -- --emit-type %input 2>&1
// --- ExitCode: 1
// --- Input:
if true then 1 else false
// --- Output:
TypeError: Cannot unify int with bool
